fix results list height to be able to show full jump button dropdown

--- a/cdap-ui/app/features/tracker/tracker.less
+++ b/cdap-ui/app/features/tracker/tracker.less
@@ -235,7 +235,7 @@ body.state-tracker {
 
       .results-list {
         overflow-y: auto;
-        max-height: 100%;
+        height: 100%;
         padding-bottom: 51px; // This is to offset the top sort panel
 
         h4, h5, p {
